examples/static_array.glaze
i32 a[3] = {10 , 20 , 30};
a[0] = 5; //error

i32 b[3];
b[0] = 10; //ok
